# ITKOptimalTransport

./: CMakeLists.txt  README.rst  itk-module.cmake  setup.py
examples/: CMakeLists.txt  OptimalTransportRegistrationExample.cxx  display.point.sets.R
include/: .itkOptimalTransportPointSetMetric.hxx.swp  .itkTransportPlan.h.swp  CapacityPropagationStrategy.h  EigenLinalgIO.h  EigenStreamingRandomRange.h  EigenStreamingRandomSVD.h  ExpandNeighborhoodStrategy.h  GMRAMultiscaleTransport.h  Grid3dMinFlow.h  IteratedCapacityPropagationStrategy.h  Kmeans.h  LPSolver.h  LemonSolver.h  MOSEKSolver.h  MaxEntropyPropagationStrategy.h  MultiscaleSinkhornTransport.h  MultiscaleTransport.h  MultiscaleTransportLP.h  MultiscaleTransportLevel.h  NeighborhoodPropagationStrategy.h  NeighborhoodStrategy.h  NodeDistance.h  PointSetGMRADataObject.h  PotentialNeighborhoodStrategy.h  PropagationStrategy.h  RandomizedNeighborhoodPropagationStrategy.h  RandomizedPropagationStrategy.h  RefineNeighborhoodStrategy.h  SinkhornPropagationStrategy.h  SinkhornTransport.h  SparseSinkhornTransport.h  TransportLP.h  TransportLPSolver.h  TransportNode.h  TransportPlan.h  itkMinimalStandardRandomVariateGenerator.h  itkOptimalTransportImageToImageFilter.h  itkOptimalTransportImageToImageFilter.hxx  itkOptimalTransportPointSetMetric.h  itkOptimalTransportPointSetMetric.hxx  (+11 more)
include/lemon/: math.h
src/: CMakeLists.txt
test/: CMakeLists.txt  itkOptimalTransportImageToImageFilterTest.cxx  itkPointSetMultiscaleOptimalTransportTest.cxx
wrapping/: CMakeLists.txt  itkOptimalTransportImageToImageFilter.wrap
